--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cryptobucks",
+  "name": "cryptoleo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "tailwind-scrollbar": "^2.1.0-preview.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwind-scrollbar": "^2.1.0-preview.0",
+    "tailwindcss": "^3.3.2"
   }
 }
